# QuantBob

./: .gitignore  LICENCE  README.md  Untitled.ipynb  environment.yml  example.ipynb  explore.ipynb  model_config.toml  pyproject.toml  requirements.txt  run.py  run.sh  test.py
model_configs/: baseline.yml  v1.yml
numer_ai_example/: analysis_and_tips.ipynb
quantbob/: __init__.py  cv.py  cv_objective.py  data_loading.py  datamodule.py  dataset.py  evaluation.py  learn_basics.py  learn_something_new.py  numerai_dataset.py  optuna_setup.py  quantbob.py  setup_dask.py  setup_pl.py  showcase.py  study.py  trainers.py  utils.py
quantbob/data/: datamodule.py  numerai_dataset.py
quantbob/data_samplers/: base.py  random_sampler.py
quantbob/feature_preprocessing/: __init__.py  feature_corr.py
quantbob/models/: __init__.py  base.py  basic_ensambler.py  quantbob_v1.py  v1.py  xgboost.py
quantbob/preprocessors/: __init__.py
quantbob/regressors/: __init__.py
quantbob/trainers/: dask_trainer.py  pl_trainer.py
quantbob/utils/: __init__.py  cv_objective.py  datamodule.py  dataset.py  evaluation.py  trainers.py
