[tool.poetry]
name = "quantbob"
version = "0.1.0"
description = ""
authors = ["Axel Almquist <accounts@almquist.io>"]

[tool.poetry.dependencies]
python = "3.8.*"
numpy = "1.21.4"
pandas = "1.3.4"
scikit-learn = "1.0.1"
numerapi = "2.9.4"
xgboost = "1.5.0"
toml = "0.10.2"
halo = "0.0.31"
fastparquet = "0.7.2"
optuna = "2.10.0"
pytorch-lightning = "1.5.10"
torch = "1.11.0"
torchsort = "0.1.9"
dask-cuda = "22.2.0"
comet_ml = "3.28.2"

[tool.poetry.dev-dependencies]
ipykernel = "6.6.0"
ipython = "8.0.1"
jupyterlab = "3.2.9"
ipywidgets = "7.6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
